fix: ディレクトリ構成を変更(./chromeに移動)

--- a/chrome/popup.html
+++ b/chrome/popup.html
@@ -2,7 +2,7 @@
 <html lang="">
 <head>
     <title>News Weed</title>
-    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <button id="sendUrlButton" class="modern-button">Send URL to Slack</button>
